syntax = "proto3";
package sgn.staking.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/celer-network/sgn-v2/x/staking/types";

// BondStatus is the status of a validator.
enum BondStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  // UNSPECIFIED defines an invalid validator status.
  BOND_STATUS_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "Unspecified"];
  // UNBONDED defines a validator that is not bonded.
  BOND_STATUS_UNBONDED = 1 [(gogoproto.enumvalue_customname) = "Unbonded"];
  // UNBONDING defines a validator that is unbonding.
  BOND_STATUS_UNBONDING = 2 [(gogoproto.enumvalue_customname) = "Unbonding"];
  // BONDED defines a validator that is bonded.
  BOND_STATUS_BONDED = 3 [(gogoproto.enumvalue_customname) = "Bonded"];
}

message Validator {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  // eth address of the validator account
  string eth_address = 1 [(gogoproto.moretags) = "yaml:\"eth_address\""];
  // eth address of the validator signer
  string eth_signer = 2 [(gogoproto.moretags) = "yaml:\"signer_address\""];
  // bech32-encoded sgn address (sdk.AccAddress) of the validator.
  string sgn_address = 3 [(gogoproto.moretags) = "yaml:\"sgn_address\""];
  // consensus_pubkey is the consensus public key of the validator, as a Protobuf Any.
  google.protobuf.Any consensus_pubkey = 4
      [(cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey", (gogoproto.moretags) = "yaml:\"consensus_pubkey\""];
  // validator status (bonded/unbonding/unbonded).
  BondStatus status = 5;
  // validator total tokens
  string tokens = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"tokens\"",
    (gogoproto.nullable) = false
  ];
  // total shares issued to a validator's delegators.
  string delegator_shares = 7 [
    (gogoproto.moretags) = "yaml:\"delegator_shares\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  // the commission rate charged to delegators, as a fraction.
  string commission_rate = 8 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"commission_rate\"",
    (gogoproto.nullable) = false
  ];
  // validator descriptions
  Description description = 9;
}

// Description defines a validator description.
message Description {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = false;

  // human-readable name for the validator.
  string moniker = 1;
  // optional identity signature (ex. UPort or Keybase).
  string identity = 2;
  // optional website link.
  string website = 3;
  // optional email for security contact.
  string contact = 4;
  // other optional details.
  string details = 5;
}

message ValidatorTransactors {
  repeated string transactors = 1;
}

message Delegation {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  // delegator_address is the Ethereum address of the delegator.
  string delegator_address = 1 [(gogoproto.moretags) = "yaml:\"delegator_address\""];
  // validator_address is the Ethereum address of the validator.
  string validator_address = 2 [(gogoproto.moretags) = "yaml:\"validator_address\""];
  // shares defines the delegation shares received.
  string shares = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}

// DelegationResponse is equivalent to Delegation except that it contains a
// balance in addition to shares which is more suitable for client responses.
message DelegationResponse {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_stringer) = false;

  Delegation delegation = 1 [(gogoproto.nullable) = false];

  cosmos.base.v1beta1.Coin balance = 2 [(gogoproto.nullable) = false];
}

message Syncer {
  uint64 val_index = 1;
  string eth_address = 2;
}

message Params {
  uint64 syncer_duration = 1;
}
